Fatto testing e refactoring

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,14 @@
 /Main.class
+/.classpath
+/.gitignore
+/.project
+/.settings/
+/Documentazione progetto.pdf
+/LibreriaCategorie.csv
+/LibreriaRegole.csv
+/LibreriaUnita.csv
+/Manuale d'uso.pdf
+/Versione5.jar
+/menu/
 /modelli/
+/utility/
