Rifattorizzato il metodo crea unità immobiliare

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,14 @@
 /Main.class
-/modelli/
+/.classpath
+/.gitignore
+/.project
+/.settings/
+/Documentazione progetto.pdf
+/LibreriaCategorie.csv
+/LibreriaRegole.csv
+/LibreriaUnita.csv
+/Manuale d'uso.pdf
+/Versione5.jar
 /menu/
+/modelli/
+/utility/
